text align fix
fix

--- a/css/global.css
+++ b/css/global.css
@@ -1056,6 +1056,7 @@ header .container button:hover {
   font-weight: 400;
   line-height: 28px; /* 175% */
   margin-bottom: 78px;
+  text-align: start;
 }
 .sec-4 .pricingcards .prcards .prlist ul {
   display: flex;
