--- a/scss/style/_section.scss
+++ b/scss/style/_section.scss
@@ -578,6 +578,7 @@
         font-weight: 400;
         line-height: 28px; /* 175% */
         margin-bottom: 78px;
+        text-align: start;
       }
 
       .prlist {
